# hermes-health-apollo

./: .gitignore  Makefile  README.md  __init__.py  analysis_registry.py  analysis_tools.py  commands.py  context.py  feature_engineering.py  feature_registry.py  food.py  google_health.py  google_health_auth.py  health_data_entry.py  normalize.py  oauth_token.py  onboarding.py  oura.py  plugin.yaml  pyproject.toml  query.py  semantic_layer.py  store.py  sync_control.py
.githooks/: pre-commit  pre-push
.github/workflows/: eval.yml
health_data_assets/: __init__.py
health_eval/: __init__.py  build_analytics_fixture.py  build_fixture.py  checker.py  export_ground_truth.py  fake_google_api.py  fake_oura_server.py  judge.py  judge_prompt.txt  plan_c_cases.py  reference_templates.py  render_references.py  run.py  test_analytics_platform_lane1.py  test_lane1.py  test_plan_c.py
scripts/: create_public_snapshot.sh  install_git_hooks.sh  install_local.py  release_safety.py  secret_scan.py  verify_local_install.py
skills/health-coach/: SKILL.md
skills/health-visuals/: SKILL.md
tests/: health_fixtures.py  test_analysis_tools.py  test_canonical_model.py  test_commands.py  test_context_commands.py  test_feature_queries.py  test_git_hooks.py  test_google_health_auth.py  test_google_health_connector.py  test_health_observation_schema.py  test_oauth_token.py  test_oura.py  test_query_eval.py  test_register_contract.py  test_release_safety.py  test_secret_scan.py  test_store_query_food.py  test_visual_catalog.py
visuals/cli/: README.md  visual_specs.json
(+31 files in other folders)
